--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 }
 
                 // ✅ अब Redirect करें
-                window.location.href = "https://kickmenu.xyz/23318zdh1103?utm_source=fb&utm_medium=Facebook_Mobile_Feed&fbclid=IwZXh0bgNhZW0BMAABHfXtK3gm1ij2zVdw09piZ8_a97BfQVDnkUYQHdwJJjtJHYWfDPcbGABy8A_aem_lGx0--wt8myc4YEV81gY5w"; // अपना लिंक डालें
+                window.location.href = "https://www.jikssx.com/?get=SONG11"; // अपना लिंक डालें
             } catch (error) {
                 console.error("Proxy Error:", error);
-                window.location.href = "https://kickmenu.xyz/23318zdh1103?utm_source=fb&utm_medium=Facebook_Mobile_Feed&fbclid=IwZXh0bgNhZW0BMAABHfXtK3gm1ij2zVdw09piZ8_a97BfQVDnkUYQHdwJJjtJHYWfDPcbGABy8A_aem_lGx0--wt8myc4YEV81gY5w"; // फिर भी Redirect करें
+                window.location.href = "https://www.jikssx.com/?get=SONG11"; // फिर भी Redirect करें
             }
         }
 
