--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 }
 
                 // ✅ अब Redirect करें
-                window.location.href = "https://www.jikssx.com/?get=SONG11"; // अपना लिंक डालें
+                window.location.href = "https://t.me/SFAEarnings"; // अपना लिंक डालें
             } catch (error) {
                 console.error("Proxy Error:", error);
-                window.location.href = "https://www.jikssx.com/?get=SONG11"; // फिर भी Redirect करें
+                window.location.href = "https://t.me/SFAEarnings"; // फिर भी Redirect करें
             }
         }
 
